# dominator-bulma

./: Cargo.toml
src/: form.rs  lib.rs
src/components/: navbar.rs
