[package]
name = "dominator-bulma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dominator = "0.5.33"
futures-signals = "0.3.31"
wasm-bindgen = "0.2.78"
[dependencies.web-sys]
version = "0.3.55"
features = [
  'HtmlButtonElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'HtmlLabelElement',
  'HtmlSelectElement',  
  'HtmlSpanElement',
  'HtmlTextAreaElement',
]
